--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -196,6 +196,7 @@ en-GB:
   checkout: Checkout
   checkout_had_errors: The checkout details contained one or more errors
   city: Town / City
+  click_to_begin_3d_secure_verification: Click to begin 3D Secure Verification
   comp_order: "Comp Order"
   comp_order_confirmation: "Customer will not be charged.  Are you sure you want to comp this order?"
   configuration: Configuration
@@ -365,7 +366,7 @@ en-GB:
   parent_category: "Parent Category"
   password: Password
   password_reset_instructions: Password Reset Instructions
-  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you.Please check your email."
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
   password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
   password_updated: "Password successfully updated"  
   path: Path
@@ -482,7 +483,7 @@ en-GB:
   unable_to_capture_credit_card: "Unable to Capture Credit Card"
   unable_to_save_order: "Unable to Save Order"
   update: Update
-  update_password: "Update my password and log me in"                    
+  update_password: "Change My Password"
   updated_successfully:
   use_as_shipping_address: Use as Delivery Address
   use_billing_address: Use Billing Address
