--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -372,6 +372,7 @@ en-GB:
   order_date: "Order Date"
   order_details: "Order Details"
   order_email_resent: "Order Email Resent"
+  order_not_in_system: This order is not known on this site.
   order_number: Order
   order_operation_authorize: Authorize
   order_processed_successfully: "Your order has been processed successfully"
