--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -371,6 +371,7 @@ en-US:
   order_date: "Order Date"
   order_details: "Order Details"
   order_email_resent: "Order Email Resent"
+  order_not_in_system: This order is not known on this site.
   order_number: Order
   order_operation_authorize: Authorize
   order_processed_successfully: "Your order has been processed successfully"
